--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,8 +5,12 @@
 
 .header-component section {
   align-items: center;
-  background-color: #023031;
   display: flex;
+}
+
+.header-section {
+  background-color: #023031;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .user-icon {
@@ -38,15 +42,17 @@
 
 .header-component nav {
   background: #f0f2f5;
+  box-shadow: 0 4px 1px rgba(0, 0, 0, 0.25);
   display: flex;
   height: 78px;
-  width: 100vw;
+  width: 100%;
 }
 
 nav .link {
   align-items: center;
   color: #2fc18c;
   display: flex;
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
   font-size: 28px;
   font-weight: 700;
   height: 100%;
