--- a/src/components/Loading.css
+++ b/src/components/Loading.css
@@ -4,8 +4,13 @@
   display: flex;
   height: 100vh;
   justify-content: center;
+  left: 0;
   position: fixed;
   top: 0;
   width: 100vw;
   z-index: 100;
+}
+
+.loading-component h1 {
+  font-family: Roboto , sans-serif;
 }
